# ICT289-Labs

./: README.md
Lab01/Ex4-old/Ex4/: Ex4.cpp  vec.h
Lab01/ex1/: ict289-L1E1.c
Lab01/ex2/: ict289-L1E2.c
Lab01/ex4/: ex4.sln  ict289-L1E4.c
Lab01/ex4/ex4/: ex4.vcxproj  ex4.vcxproj.filters  off.cpp  off.h
Week 3-4/Week3-4/: Week3-4.vcxproj.filters  ex4.cpp  main.c  mainFile.c  vec.c
Week 5-6/: 3.docx  CMakeLists.txt
Week 5-6/ViewingLab/: ViewingLab.sln  ViewingLab.vcxproj  ViewingLab.vcxproj.filters  main.c  window.h
Week 5-6/ViewingLab/src/: CMakeLists.txt  window.c  window.h
Week3-4/: Week3-4.sln
Week3-4/Week3-4/: HelloCube.c  Week3-4.vcxproj  off.c  off.h  vec.h
week 9-10/ICT289-Wk-9-10/: CMakelists.txt  ICT289-Week8-10-Lab.code-workspace  ICT289-Wk-9-10.sln  ICT289-Wk-9-10.vcxproj  ICT289-Wk-9-10.vcxproj.filters
week 9-10/ICT289-Wk-9-10/FindCmakeFiles/: Findfreeglut.cmake
week 9-10/ICT289-Wk-9-10/src/: CMakelists.txt  application.c  ball.c  ball.h  camera.c  colours.h  defines.h  input.c  input.h  rigidbody.c  rigidbody.h  vector.c  vector.h  window.c  window.h
